--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -7,5 +7,63 @@
 */
 
 "Назад" = "Back";
+"Отменить" = "Cancel";
+"Сохранить" = "Save";
+"Завершить" = "Done";
+"Готово" = "Done";
 "Выберите версию" = "Choose version";
 "Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем сахара в крови. В версию внедрена рекомендательная система, помогающая корректировать прием пищи пациенток.\nПредназначен для беременных пациенток, страдающих ГСД" = "This version allows you to monitor food intake, physical activity, and blood sugar levels. The version includes a recommendation system to help adjust the patient's food intake.nnDesigned for pregnant patients with GDM";
+"ДиаКомпаньон" = "DiaCompanion";
+"Главная" = "Home";
+"Рецепты" = "Recipes";
+"Настройки" = "Settings";
+"История" = "History";
+"Сегодня" = "Today";
+"Разделы дневника" = "Diary sections";
+"Приемы пищи" = "Food Intake";
+"Измерение сахара" = "Sugar Measurement";
+"Введение инсулина" = "Insulin Injection";
+"Физическая активность" = "Physical Activity";
+"Физическая нагрузка" = "Physical activity";
+"Измерение веса" = "Weight Measurement";
+"Уровень кетонурии" = "Ketones Rate";
+"Общая информация" = "General information";
+"Прием пищи" = "Meals";
+"Завтрак" = "Breakfast";
+"Обед" = "Lunch";
+"Ужин" = "Dinner";
+"Перекусы" = "Snacks";
+"Дата" = "Date";
+"Время" = "Time";
+"Уровень сахара в крови" = "BG rate";
+"Записать текущий УСК" = "Set current BG rate";
+"УСК не определен" = "Insufficient data";
+"УСК превысит норму" = "BG will exceed the target value";
+"УСК не превысит норму" = "BG level within the target value";
+"5,0 ммоль/л" = "5,0 mmol/l";
+"Потребленные продукты" = "Consumed product";
+"Добавить" = "Add item";
+"ГИ / ГН / Наименование, г." = "GI / Gl / Dish name, g.";
+"Высокий уровень глюкозы до еды. Рекомендовано уменьшить количество углеводов во время перекусов. Если перекусов не было, проконсультируитесь с врачом" = "High glucose levels before meals. It is recommended to reduce carbohydrates during snacks. If no snacks, consult a physician";
+"Уменьшите количество продуктов с высокой гликемической нагрузкой (ГН)" = "Reduce the amount of foods with a high glycemic load (GL)";
+"Сахар" = "Sugar";
+"Уровень сахара в крови, ммоль/л" = "Blood glucose rate, mmol/l";
+"Период" = "Timeframe";
+"Натощак" = "Fasting";
+"После завтрака" = "After breakfast";
+"После обеда" = "After lunch";
+"После ужина" = "After dinner";
+"Дополнительно" = "Optional";
+"При родах" = "In childbirth";
+"Салат зеленый с огурцами и помидорами" = "Vegetable salad";
+"Треска, тушенная в томате с овощами" = "Stewed cod";
+"Рис бурый" = "Brown rice";
+"Хлеб зерновой (мука в/с и зерно дробленое)" = "Grain bread";
+"Чай, с травами, ромашкой, заваренный" = "Green tea";
+"Картофель, жаренный во фритюре  брусочками" = "Fried potatoes";
+"Мясо в белом соусе (говядина)" = "Beef in white sauce";
+"Пицца, покрытая сыром, обычная корочка" = "Cheese pizza";
+"Компот вишневый" = "Cherry compote";
+"г." = "g.";
+
+
