--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "5,0 ммоль/л" = "5,0 mmol/l";
 "Потребленные продукты" = "Consumed product";
 "Добавить" = "Add item";
-"ГИ / ГН / Наименование, г." = "GI / Gl / Dish name, g.";
+"ГИ / ГН / Угл. / Продукт" = "GI / Gl / Carbo / Dish name";
 "Высокий уровень глюкозы до еды. Рекомендовано уменьшить количество углеводов во время перекусов. Если перекусов не было, проконсультируитесь с врачом" = "High glucose levels before meals. It is recommended to reduce carbohydrates during snacks. If no snacks, consult a physician";
 "Уменьшите количество продуктов с высокой гликемической нагрузкой (ГН)" = "Reduce the amount of foods with a high glycemic load (GL)";
 "Сахар" = "Sugar";
