--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -5,14 +5,241 @@
   Created by Артём Исаков on 30.01.2023.
   
 */
-
+"Логин" = "Login";
+"Пароль" = "Password";
+"Войти" = "Sign in";
+"Как зарегистрироваться" = "How to sign up";
 "Назад" = "Back";
 "Отменить" = "Cancel";
+"Изменить" = "Edit";
+"Добавить" = "Add";
+"Внести" = "Add";
+"Готово" = "Done";
 "Сохранить" = "Save";
 "Завершить" = "Done";
-"Готово" = "Done";
+"Проверьте правильность введенных данных или повторите попытку позже" = "Check if the data entered is correct or try again later";
+"Для доступа к приложению по программе обязательного медицинского страхования обратитесь за пригласительным кодом в ближайщее государственное лечебно-профилактическое учреждение согласно месту жительства. И пройдите регистрацию по ссылке: http://diacompanion.ru/register." = "To access the application under the compulsory health insurance program, apply for an invitation code to the nearest public health care institution according to your place of residence. And register at the link: http://diacompanion.ru/register.";
 "Выберите версию" = "Choose version";
-"Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. В версию внедрена рекомендательная система, помогающая корректировать прием пищи пациенток.\nПредназначен для беременных пациенток, страдающих ГСД" = "This version allows you to monitor food intake, physical activity, and blood sugar levels. The version includes a recommendation system to help adjust the patient's food intake.nnDesigned for pregnant patients with GDM";
+"ГСД, диета (с прогнозированием)" = "GDM, diet (with prediction)";
+"Персональный помощник при планировании приема пищи для беременных с гестационным сахарным диабетом. Встроенная в приложение модель прогнозирует вероятность гипергликемии после планируемого приема пищи, и, в случае высокой вероятности гипергликемии, демонстрирует рекомендации для ее предотвращения." = "Personalized meal planning assistant for pregnant women with gestational diabetes mellitus. The model built into the app predicts the likelihood of hyperglycemia after a planned meal and, if hyperglycemia is highly likely, shows recommendations to prevent it.";
+"ГСД, инсулинотерапия" = "GDM, insulin therapy";
+"Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. Предназначен для беременных пациенток, страдающих ГСД." = "The version allows you to monitor your food intake, physical activity and blood glucose levels. It is intended for pregnant patients with GDM.";
+"Дневник питания и самоконтроля" = "Nutrition and self-monitoring diary";
+"Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. Предназначен для пациентов, страдающих диабетом." = "The version allows you to monitor your food intake, physical activity and blood glucose levels. Designed for patients with diabetes.";
+"Дневник питания" = "Food diary";
+"Версия предоставляет функционал для ведения данных о приемах пищи и физической активности. Подходит для пациентов, не болеющих диабетом." = "This version provides functionality for keeping data on food intake and physical activity. Suitable for non-diabetic patients.";
+"Сделанный выбор можно изменить позже в настройках" = "The selection made can be changed later in the settings";
+"Описание" = "Description";
+"Далее" = "Next";
+"1-ая" = "1st";
+"2-ая" = "2nd";
+"3-я" = "3rd";
+"4-ая" = "4th";
+"5-ая" = "5th";
+"6-ая" = "6th";
+"7-ая" = "7th";
+"8-ая" = "8th";
+"9-ая" = "9th";
+"10-ая" = "10th";
+"Не было" = "None";
+"Нет" = "No";
+"Да" = " Yes";
+"Не знаю" = "I don't know";
+"Бромкриптин" = "Bromocriptine";
+"Достинекс" = "Cabergolinum";
+"Другое" = "Other";
+"< 1 мес." = "< 1 month";
+"1-3 мес." = "1-3 months";
+"> 3 мес." = "> 3 months";
+"Не посещался" = "None";
+"Меньше 1 раза в мес." = "Less than once a month";
+"Не менее 1 раза в мес." = "At least once a month";
+"Беременность по счету" = "Pregnancy count";
+"Количество родов" = "Number of deliveries";
+"Применение комбинированных оральных контрацептивов" = "Use of combined oral contraceptives";
+"Беременность" = "Pregnancy";
+"Брали ли у вас пролактин" = "Prolactin test";
+"Было зафиксировано повышение" = "An increase was recorded";
+"Назначен препарат" = "Prescribed medication";
+"Перечислите препараты" = "List the medications";
+"Пролактин" = "Prolactin";
+"Прием вит. D до беременности" = "Taking vitamin D before pregnancy";
+"Прием вит. D во время беременности" = "Vitamin D intake during pregnancy";
+"Отпуск в жарких странах" = "Vacation in southern countries";
+"Первый триместр" = "First trimester";
+"Второй триместр" = "Second trimester";
+"Третий триместр" = "Third trimester";
+"Солярий" = "Solarium";
+"Витамин D" = "Vitamin D";
+"Уровень гликированного гемоглобина" = "Glycated hemoglobin level";
+"Уровень триглицеридов" = "Triglyceride levels";
+"Уровень холестерина" = "Cholesterol level";
+"Уровень глюкозы натощак" = "Fasting glucose level";
+"Срок на момент сдачи анализов" = "Gestational age at the time of testing";
+"Другие анализы" = "Other analysis";
+"Метрики" = "Metrics";
+"Диабет у родственников" = "Relatives with diabetes";
+"Нарушение толерантности к глюкозе до беременности" = "Impaired glucose tolerance before pregnancy";
+"Гестационный диабет" = "Gestational diabetes";
+"До беременности" = "Before the pregnancy.";
+"Во время беременности" = "During pregnancy";
+"Гипертоническая болезнь" = "Hypertension";
+"За 6 месяцев до беременности" = "Six months before pregnancy";
+"До того, как узнали о беременности" = "Before you knew you were pregnant";
+"Во время беременности" = "During pregnancy";
+"Курение" = "Smoking";
+"Здоровье" = "Health";
+"< 6 раз" = "< 6 times";
+"6-12 раз" = "6-12 times";
+"> 12 раз" = "> 12 times";
+"< 2 раз" = "< 2 times";
+"2-4 раза" = "2-4 times";
+"> 4 раз" = "> 4 times";
+"< 3 раз" = "< 3 times";
+"3-6 раз" = "3-6 times";
+"> 6 раз" = "> 6 times";
+"< 1 раза" = "< 1 time";
+"1-2 раза" = "1-2 times";
+"> 2 раз" = "> 2 times";
+"1-3 раза" = "1-3 times";
+"> 3 раз" = "> 3 times";
+"Укажите частоту потребления продуктов в неделю" = "Indicate the frequency of food consumption per week";
+"До беременности" = "Before the pregnancy";
+"Фрукты" = "Fruits";
+"Пирожные" = "Cakes";
+"Выпечка" = "Baking";
+"Шоколад" = "Chocolate";
+"Обезжиренные молочные продукты" = "Skimmed dairy products";
+"Не обезжиренные молочные продукты" = "Non-fat dairy products";
+"Бобовые" = "Legumes";
+"Мясо и мясные изделия" = "Meat and meat products";
+"Сухофрукты" = "Dried fruits";
+"Рыба и рыбные изделия" = "Fish and fish products";
+"Цельнозреновой хлеб" = "";
+"Цельнозреновой хлеб" = "Wholemeal bread";
+"Любой хлеб" = "Any bread";
+"Cоусы, майонез" = "Sauces, mayonnaise";
+"Овощи, сырые или приготовленные" = "Vegetables, raw or cooked";
+"Алкоголь" = "Alcohol";
+"Сладкие напитки" = "Sweet drinks";
+"Кофе" = "Coffee";
+"Сосики, колбаса" = "Sausages";
+"Предпочтения" = "Preferences";
+"< 30 минут" = "< 30 min.";
+"30-60 минут" = "30-60 min.";
+"> 60 минут" = "> 60 min.";
+"< 4 пролетов" = "< 4 floors";
+"4-16 пролетов" = "4-16 floors";
+"> 16 пролетов" = "> 16 floors";
+"2-3 раза" = "2-3 times";
+"Легкая ходьба, в день" = "Walking, per day";
+"Степпинг, в день" = "Climbing stairs, per day";
+"Спорт, в неделю" = "Sports, per week";
+"Нагрузка" = "Physical Activity";
+"ФИО" = "Full name";
+"Вес, кг." = "Weight, kg.";
+"Рост, см." = "Height, cm.";
+"Дата рождения" = "Date of birth";
+"ID пациента" = "Patient ID";
+"Общая информация" = "General info";
+"Врач" = "Physician";
+"На мониторинге с" = "On the monitor since";
+"Неделя беременности" = "Gestational age (week)";
+"День недели беременности" = "The day of the week of pregnancy";
+"Мониторинг" = "Monitoring";
+"О пациенте" = "About the patient";
+"Поделиться" = "Share with anyone";
+"Отправить врачу" = "Send it to the doctor";
+"Статус операции" = "Operation status";
+"OK" = "OK";
+"На устройстве не установлен почтовый клиент" = "No email client is installed on the device";
+"Перейдите в раздел о пациенте во  вкладке Дополительно, чтобы назначить лечащего врача. В противном случае используйте вариант сохранить на устройстве." = "Go to the About Patient section of the Options tab to assign an attending physician. Otherwise, use the option to Share with anyone to save to device.";
+"Карта пациента" = "Patient record";
+"Полные дни" = "Complete days";
+"Обучение" = "Training";
+"Контакты" = "Contacts";
+"О приложении" = "About";
+"Управление аккаунтом" = "Account management";
+"Удалить аккаунт" = "Delete account";
+"Удаляя аккаунт вы потеряете доступ к приложению, вся информация в нем будет удалена." = "By deleting the account you will lose access to the app, all information in it will be deleted.";
+"По вопросам сотрудничества обращайтесь по адресу электронной почты Национального Медицинского Исследовательского Центра: ncmu@almazovcentre.ru." = "For questions about collaboration, please contact the National Medical Research Center email address: ncmu@almazovcentre.ru.";
+"Центр персонализированной медицины" = "Center for Personalized Medicine";
+"Дополнительную информацию о сотрудниках, курирующих проект, можно получить на странице [Научно-Исследовательской Лаборатории Метаболических Заболеваний и Микробиоты](https://ncmu.almazovcentre.ru/about/struktura-i-podrazdeleniya/nauchno-issledovatelskiy-otdel-geneticheskikh-riskov-i-personifitsirovannoy-profilaktiki/nil-metabolicheskikh-zabolevaniy-i-mikrobioty/)" = "For more information about the collaborators overseeing the project, please visit the [Metabolic Diseases and Microbiota Research Laboratory](https://ncmu.almazovcentre.ru/en/about/struktura-i-podrazdeleniya/nauchno-issledovatelskiy-otdel-geneticheskikh-riskov-i-personifitsirovannoy-profilaktiki/nil-metabolicheskikh-zabolevaniy-i-mikrobioty/)";
+"Исследовательская лаборатория" = "Research Laboratory";
+"Межплатформенный комплекс программного обеспечения, сочетающий традиционные методы контроля показаний глюкозы в крови с машинным обучением." = "A cross-platform software suite that combines traditional methods of monitoring blood glucose readings with machine learning.";
+"Описание медицинского подхода" = "Description of the medical approach";
+"Описание методологии наблюдения пациента" = "Description of patient follow-up methodology";
+"Принципы разработки модели машинного обучения" = "Principles of machine learning model development";
+"Принципы разработки системы мониторинга" = "Principles for the design of a monitoring system";
+"Роль ГИ и ГН в прогнозировании УГК" = "The role of GI and GL in predicting blood glucose levels";
+"Роль микробиома в прогнозировании УГК" = "The role of the microbiome in predicting blood glucose levels";
+"Разработка базы данных с ГИ" = "Development of a database with GI";
+"Политика конфиденциальности" = "Privacy Policy";
+"Пользовательское соглашение" = "User Agreement";
+"Документы" = "Papers";
+"Проекты НЦМУ Персонализированной медицины" = "Projects of the Personalized Medicine Research Center";
+"Другие проекты" = "Other projects";
+"Использованные ресурсы" = "Used resources";
+"Добавьте рецепт" = "Add a recipe";
+"Рецепты" = "Recipes";
+"Заполните поля в соотвествии с требованиями" = "Fill in the fields according to the requirements";
+"Название блюда" = "Name of dish";
+"Изображение" = "Image";
+"Вставьте ссылку (URL)" = "Insert link (URL)";
+"Составляющие рецепта" = "Recipe ingredients";
+"Несохраненные изменения" = "Unsaved changes";
+"Покинуть" = "Leave";
+"Вы внесли изменения, но не сохранили их. Если вы покините страницу - временные данные будут удалены." = "You have made changes but have not saved them. If you leave the page, the temporary data will be deleted.";
+"Изменить рецепт" = "Change the recipe";
+"Создать рецепт" = "Create a recipe";
+"Категории продуктов" = "Product Category";
+"Алкогольные напитки" = "Alcoholic beverages";
+"Блюда из картофеля, овощей и грибов" = "Dishes made from potatoes, vegetables, and mushrooms";
+"Блюда из круп" = "Dishes made from cereals";
+"Блюда из мяса и мясных продуктов" = "Dishes made from meat and meat products";
+"Блюда из рыбы, морепродуктов и раков" = "Dishes made from fish, seafood, and crustaceans";
+"Блюда из творога" = "Dishes made from cottage cheese";
+"Бдюда из яиц" = "Dishes made from eggs";
+"Бобовые, орехи, продукты из бобовых" = "Legumes, nuts, products made from legumes";
+"Быстрое питание" = "Fast food";
+"Вспомогательные продукты" = "Additional items";
+"Гарниры" = "Garnish";
+"Готовые завтраки" = "Ready-made breakfasts";
+"Детское питание" = "Baby food";
+"Диабетические продукты" = "Diabetic products";
+"Жиры и масла" = "Fats and oils";
+"Закуски" = "Snacks";
+"Зелень и овощные продукты" = "Greens and vegetable products";
+"Зерно, мука" = "Grain, flour";
+"Злаки и макароны" = "Cereals and pasta";
+"Злаки на завтрак" = "Cereals for breakfast";
+"Колбасы" = "Sausages";
+"Кондитерские изделия" = "Bakery products";
+"Конфеты, шоколад" = "Sweets, chocolate";
+"Молочные и яичные продукты" = "Dairy and egg products";
+"Молочные продукты" = "Dairy products";
+"Морепродукты" = "Seafood";
+"Мясо и мясные продуты" = "Meat and meat products";
+"Напитки" = "Beverages";
+"Овощи" = "Vegetables";
+"Пища коренных народов" = "Indigenous peoples' food";
+"Продукты из говядины" = "Beef products";
+"Продукты из орехов и семян" = "Products made from nuts and seeds";
+"Продуты из птицы" = "Poultry products";
+"Продукты из свинины" = "Pork products";
+"Продукты из баранины, телятины и дичи" = "Products made from lamb, veal, and game";
+"Ресторанная еда" = "Restaurant food";
+"Рыба и рыбные продукты" = "Fish and fish products";
+"Сладости" = "Sweets";
+"Сосиски и мясные блюда" = "Sausages and meat dishes";
+"Соусы" = "Sauces";
+"Специи и травы" = "Spices and herbs";
+"Супы" = "Soups";
+"Сыры" = "Cheeses";
+"Фрукты и фруктовые соки" = "Fruits and fruit juices";
+"Хлебобулочные изделия" = "Bakery products";
+"Холодные блюда" = "Cold dishes";
+"Ягоды, варенье" = "Berries, jam";
 "ДиаКомпаньон" = "DiaCompanion";
 "Главная" = "Home";
 "Рецепты" = "Recipes";
@@ -20,15 +247,16 @@
 "История" = "History";
 "Сегодня" = "Today";
 "Разделы дневника" = "Diary sections";
-"Приемы пищи" = "Food Intake";
-"Измерение глюкозы" = "Sugar Measurement";
+"Приемы пищи" = "Meals";
+"Прием пищи" = "Meal";
+"Измерение глюкозы" = "Blood Glucose";
 "Введение инсулина" = "Insulin Injection";
 "Физическая активность" = "Physical Activity";
-"Физическая нагрузка" = "Physical activity";
-"Измерение веса" = "Weight Measurement";
-"Уровень кетонурии" = "Ketones Rate";
+"Физическая нагрузка" = "Physical Activity";
+"Aктивность" = "Physical Activity";
+"Измерение веса" = "Weight";
+"Уровень кетонурии" = "Urine Ketones";
 "Общая информация" = "General information";
-"Прием пищи" = "Meals";
 "Завтрак" = "Breakfast";
 "Обед" = "Lunch";
 "Ужин" = "Dinner";
@@ -46,7 +274,7 @@
 "ГИ / ГН / Угл. / Продукт" = "GI / Gl / Carbo / Dish name";
 "Высокий уровень глюкозы до еды. Рекомендовано уменьшить количество углеводов во время перекусов. Если перекусов не было, проконсультируитесь с врачом" = "High glucose levels before meals. It is recommended to reduce carbohydrates during snacks. If no snacks, consult a physician";
 "Уменьшите количество продуктов с высокой гликемической нагрузкой (ГН)" = "Reduce the amount of foods with a high glycemic load (GL)";
-"Глюкоза" = "Sugar";
+"Глюкоза" = "Blood Glucose";
 "Уровень глюкозы в крови, ммоль/л" = "Blood glucose rate, mmol/l";
 "Период" = "Timeframe";
 "Натощак" = "Fasting";
@@ -55,3 +283,58 @@
 "После ужина" = "After dinner";
 "Дополнительно" = "Optional";
 "При родах" = "In childbirth";
+"Ед." = "Units";
+"Тип действия" = "Action type";
+"Инсулин" = "Insulin";
+"Ультракороткий" = "Ultra-short";
+"Короткий" = "Short";
+"Пролонгированный" = "Prolonged";
+"Натощак" = "On an empty stomach";
+"Завтрак" = "Breakfast";
+"Обед" = "Lunch";
+"Ужин" = "Dinner";
+"Дополнительно" = "Additional";
+"Длительность, мин." = "Duration, min.";
+"Род занятий" = "Type";
+"Введите релевантное значение" = "Enter a relevant value";
+"Зарядка" = "Warm-up";
+"Сон" = "Sleep";
+"Ходьба" = "Walking";
+"Спорт" = "Sport";
+"Уборка в квартире" = "Housekeeping";
+"Работа в огороде" = "Working in the garden";
+"кг." = "kg.";
+"Вес" = "Weight";
+"ммоль/л" = "mmol/l";
+"Продукты питания" = "Food";
+"База данных - проприетарная собственность ФГБУ НМИЦ им. В.А. Алмазова" = "The database is proprietary property of Almazov National Medical Research Center.";
+"По релевантности" = "Relevance";
+"По возрастанию ГИ" = "In ascending GI order";
+"По убыванию ГИ" = "In descending GI order";
+"Порядок фильтрации" = "Filter order";
+"Информация о продукте" = "Product Info";
+"Граммы" = "Grams";
+"День" = "Day";
+"Неделя" = "Week";
+"Все записи" = "All entries";
+"Фильтр" = "Filter";
+"Состав приема пищи" = "Meal composition";
+"Время приема" = "Time";
+"Список блюд" = "List of dishes";
+"Время начала" = "Start time";
+"Кол-во ед." = "Units";
+"Тип нагрузки" = "Type";
+"Время измерения" = "Time";
+"Измерение массы тела" = "Weight";
+"Уровень кетонов в моче" = "Urine Ketones";
+"Уровень глюкозы в крови ммоль/л" = "Blood glucose rate, mmol/l";
+"Иньекции инсулина" = "Insulin Injections";
+"Масса" = "Weight";
+"Белки" = "Protein";
+"Жиры" = "Fats";
+"Углеводы" = "Carbohydrates";
+"ККал" = "Сalories";
+"ГИ" = "GI";
+"ГН" = "GL";
+"УГК до приема пищи" = "Blood glucose rate before meals";
+"Вероятность гипергликемии" = "Probability of hyperglycemia";
