--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -338,3 +338,18 @@
 "ГН" = "GL";
 "УГК до приема пищи" = "Blood glucose rate before meals";
 "Вероятность гипергликемии" = "Probability of hyperglycemia";
+"Прогнозируемый УГК" = "Predicted glucose levels";
+"превысит" = "will exceed";
+"не превысит" = " will not exceed";
+"норму" = "the norm";
+"Нажмите, чтобы узнать больше" = "Tap to learn more";
+"Список продуктов" = "List of products";
+"Введенный УГК до приема пищи" = "Entered glucose level before meals";
+"Смахните влево, чтобы удалить или отредактировать" = "Swipe to the left to delete or edit";
+"%@ (%@ сост.)" = "%@ (%@ dishes)";
+"(%@ сост.)" = "(%@ dishes)";
+"%@ мин." = "%@ min.";
+"%@ ч." = "%@ h.";
+"%@ Eд." = "%@ Units";
+"%@ ммоль/л" = "%@ mmol/l";
+"Вес: %@ кг." = "Weight: %@ kg.";
