--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -21,13 +21,14 @@
 "Для доступа к приложению по программе обязательного медицинского страхования обратитесь за пригласительным кодом в ближайщее государственное лечебно-профилактическое учреждение согласно месту жительства. И пройдите регистрацию по ссылке: http://diacompanion.ru/register." = "To access the application under the compulsory health insurance program, apply for an invitation code to the nearest public health care institution according to your place of residence. And register at the link: http://diacompanion.ru/register.";
 "Выберите версию" = "Choose version";
 "ГСД, диета (с прогнозированием)" = "GDM, diet (with prediction)";
-"Персональный помощник при планировании приема пищи для беременных с гестационным сахарным диабетом. Встроенная в приложение модель прогнозирует вероятность гипергликемии после планируемого приема пищи, и, в случае высокой вероятности гипергликемии, демонстрирует рекомендации для ее предотвращения." = "Personalized meal planning assistant for pregnant women with gestational diabetes mellitus. The model built into the app predicts the likelihood of hyperglycemia after a planned meal and, if hyperglycemia is highly likely, shows recommendations to prevent it.";
+"Рекомендательная система DiaCompanion Pro предназначена для прогнозирования постпрандиального гликемического ответа беременных женщин с гестационным сахарным диабетом на основе данных о питании и формирования рекомендаций для предотвращения гипергликемии." = "The DiaCompanion Pro recommendation system is designed to predict the postprandial glycemic response of pregnant women with gestational diabetes mellitus based on nutritional data and generate recommendations to prevent hyperglycemia.";
 "ГСД, инсулинотерапия" = "GDM, insulin therapy";
 "Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. Предназначен для беременных пациенток, страдающих ГСД." = "The version allows you to monitor your food intake, physical activity and blood glucose levels. It is intended for pregnant patients with GDM.";
 "Дневник питания и самоконтроля" = "Nutrition and self-monitoring diary";
 "Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. Предназначен для пациентов, страдающих диабетом." = "The version allows you to monitor your food intake, physical activity and blood glucose levels. Designed for patients with diabetes.";
 "Дневник питания" = "Food diary";
 "Версия предоставляет функционал для ведения данных о приемах пищи и физической активности. Подходит для пациентов, не болеющих диабетом." = "This version provides functionality for keeping data on food intake and physical activity. Suitable for non-diabetic patients.";
+"Производитель: ФГБУ «НМИЦ им. В.А. Алмазова» Минздрава России. Юридическое лицо зарегистрировано по адресу: Россия, г. Санкт-Петербург, ул. Аккуратова, д. 2., 197341. Свидетельство о регистрации программы для ЭВМ выдано 06.06.2022 за номером 2022661781." = "Manufacturer: National Research Medical Center of the Ministry of Health of Russia. The legal entity is registered at the address: Russia, St. Petersburg, Akkuratova str. 2, 197341. Certificate of registration of the computer program was issued on 06.06.2022 under the number 2022661781.";
 "Сделанный выбор можно изменить позже в настройках" = "The selection made can be changed later in the settings";
 "Описание" = "Description";
 "Далее" = "Next";
@@ -103,7 +104,7 @@
 "> 2 раз" = "> 2 times";
 "1-3 раза" = "1-3 times";
 "> 3 раз" = "> 3 times";
-"Укажите частоту потребления продуктов в неделю" = "Indicate the frequency of food consumption per week";
+"Укажите частоту потребления продуктов" = "Indicate the frequency of food consumption";
 "До беременности" = "Before the pregnancy";
 "Фрукты" = "Fruits";
 "Пирожные" = "Cakes";
@@ -136,15 +137,17 @@
 "Степпинг, в день" = "Climbing stairs, per day";
 "Спорт, в неделю" = "Sports, per week";
 "Нагрузка" = "Physical Activity";
-"ФИО" = "Full name";
-"Вес, кг." = "Weight, kg.";
-"Рост, см." = "Height, cm.";
+"Полное имя" = "Full name";
+"Вес до беременности" = "Weight before pregnancy";
+"Рост" = "Height";
+"см." = "cm.";
 "Дата рождения" = "Date of birth";
 "ID пациента" = "Patient ID";
 "Общая информация" = "General info";
 "Врач" = "Physician";
 "На мониторинге с" = "On the monitor since";
-"Неделя беременности" = "Gestational age (week)";
+"Неделя беременности" = "Gestational age";
+"Неделя беременности на дату начала мониторинга" = "Week of gestation at the start date of monitoring";
 "День недели беременности" = "The day of the week of pregnancy";
 "Мониторинг" = "Monitoring";
 "О пациенте" = "About the patient";
@@ -177,7 +180,7 @@
 "Политика конфиденциальности" = "Privacy Policy";
 "Пользовательское соглашение" = "User Agreement";
 "Документы" = "Papers";
-"Проекты НЦМУ Персонализированной медицины" = "Projects of the Personalized Medicine Research Center";
+"Проекты НЦМУ Центр Персонализированной медицины" = "Projects of the Personalized Medicine Research Center";
 "Другие проекты" = "Other projects";
 "Использованные ресурсы" = "Used resources";
 "Добавьте рецепт" = "Add a recipe";
@@ -313,9 +316,11 @@
 "По убыванию ГИ" = "In descending GI order";
 "Порядок фильтрации" = "Filter order";
 "Информация о продукте" = "Product Info";
+"Масса продукта в граммах" = "Product weight in grams";
 "Граммы" = "Grams";
 "День" = "Day";
 "Неделя" = "Week";
+"в неделю" = "per week";
 "Все записи" = "All entries";
 "Фильтр" = "Filter";
 "Состав приема пищи" = "Meal composition";
@@ -345,6 +350,7 @@
 "Нажмите, чтобы узнать больше" = "Tap to learn more";
 "Список продуктов" = "List of products";
 "Введенный УГК до приема пищи" = "Entered glucose level before meals";
+"Введите значение для получения диетических рекомедаций" = "Enter value for dietary recommendations";
 "Смахните влево, чтобы удалить или отредактировать" = "Swipe to the left to delete or edit";
 "Введите состав приема пищи" = "Enter the meal composition";
 "%@ (%@ сост.)" = "%@ (%@ dishes)";
@@ -354,3 +360,11 @@
 "%@ Eд." = "%@ Units";
 "%@ ммоль/л" = "%@ mmol/l";
 "Вес: %@ кг." = "Weight: %@ kg.";
+"Анопова А.Д." = "Anopova A.D.";
+"Болотько Я.А." = "Bolotko Y.A.";
+"Дронова А.В." = "Dronova A.V.";
+"Попова П.В." = "Popova P.V.";
+"Ткачут А.С." = "Tkachut A.S.";
+"Васюкова Е.А." = "Vasyukova E.A.";
+"Пашкова К.В." = "Pashkova K.V.";
+"Без врача" = "Without a doctor";
