--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -350,7 +350,7 @@
 "Нажмите, чтобы узнать больше" = "Tap to learn more";
 "Список продуктов" = "List of products";
 "Введенный УГК до приема пищи" = "Entered glucose level before meals";
-"Введите значение для получения диетических рекомедаций" = "Enter value for dietary recommendations";
+"Введите значение для получения диетических рекомендаций" = "Enter a value to get dietary recommendations";
 "Смахните влево, чтобы удалить или отредактировать" = "Swipe to the left to delete or edit";
 "Введите состав приема пищи" = "Enter the meal composition";
 "%@ (%@ сост.)" = "%@ (%@ dishes)";
