--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -383,3 +383,4 @@
 "Вероятно, уровень глюкозы после еды будет высоким, рекомендована прогулка после приема пищи." = "Glucose levels are likely to be high after a meal, a post-meal walk is recommended.";
 "При возникновении проблем в работе приложения обращайтесь по электронной почте regmed@almazovcentre.ru." = "If you have any problems with the application, please contact regmed@almazovcentre.ru.";
 "По вопросам работы приложения" = "For questions about the application";
+"Регистрационное удостоверение" = "Registration Certificate";
